[package]
name = "sticker-utils"
version = "0.1.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]

[dependencies]
conllx = "0.10"
failure = "0.1"
finalfusion = "0.5"
getopts = "0.2"
indicatif = "0.11"
ordered-float = { version = "1", features = ["serde"] }
serde = "1"
serde_cbor = "0.9"
serde_derive = "1"
stdinout = "0.4"
threadpool = "1"
toml = "0.5"
sticker = { path = "../sticker" }
tensorflow = "0.13"

[dev-dependencies]
lazy_static = "1"
