[package]
name = "sticker-utils"
version = "0.6.1"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler (utilities)"
documentation = "https://github.com/danieldk/sticker"
homepage = "https://github.com/danieldk/sticker"
repository = "https://github.com/danieldk/sticker.git"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "../LICENSE.md"

[dependencies]
clap = "2"
conllx = "0.11"
failure = "0.1"
finalfusion = "0.7.1"
indicatif = "0.11"
ordered-float = { version = "1", features = ["serde"] }
serde = "1"
serde_cbor = "0.10"
serde_derive = "1"
stdinout = "0.4"
threadpool = "1"
toml = "0.5"
sticker = { path = "../sticker", version = "0.6.1" }
tensorflow = "0.13"

[dev-dependencies]
lazy_static = "1"
