[package]
name = "sticker"
version = "0.5.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
documentation = "https://github.com/danieldk/sticker"
homepage = "https://github.com/danieldk/sticker"
repository = "https://github.com/danieldk/sticker.git"
license = "BlueOak-1.0.0"

[dependencies]
conllx = "0.11"
failure = "0.1"
finalfusion = "0.7.1"
itertools = "0.8"
ndarray = "0.12"
ndarray-tensorflow = "0.2"
ordered-float = "1"
petgraph = "0.4"
protobuf = "2"
serde = "1"
serde_derive = "1"
sticker-tf-proto = { path = "../sticker-tf-proto", version = "0.1.0" }
tensorflow = "0.13"

[dev-dependencies]
approx = "0.3"
flate2 = "1"
