[package]
name = "sticker"
version = "0.10.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
documentation = "https://github.com/danieldk/sticker"
homepage = "https://github.com/danieldk/sticker"
repository = "https://github.com/danieldk/sticker.git"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "../LICENSE.md"

[dependencies]
conllx = "0.12.1"
failure = "0.1"
finalfusion = "0.11"
itertools = "0.8"
ndarray = "0.13"
ndarray-tensorflow = "0.3"
numberer = "0.1"
ordered-float = "1"
petgraph = "0.4"
protobuf = "2"
rand_xorshift = "0.2"
rand = "0.7"
serde = "1"
serde_cbor = "0.10"
serde_derive = "1"
sticker-encoders = "0.1"
sticker-tf-proto = { path = "../sticker-tf-proto", version = "0.10.0" }
toml = "0.5"
tensorflow = "0.13"

[dev-dependencies]
approx = "0.3"
flate2 = { version = ">= 1.0.0, <1.0.10" }
lazy_static = "1"
